계산기 완성

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </div>
       </div>
 
+      <!-- line break button -->
+      <button id="lineBreakButton">Line Break</button>
+
       <div class="buttons">
         <!-- 첫 번째 행 -->
         <button class="special red">AC</button>
